[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
mf-core = { path = "crates/mf-core" }
mf-sql = { path = "crates/mf-sql" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
petgraph = "0.7"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
itertools = "0.14"
insta = { version = "1", features = ["yaml"] }

[package]
name = "metricflow-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dev-dependencies]
mf-core = { workspace = true }
mf-sql = { workspace = true }
serde_json = { workspace = true }
