[build-system]
requires = ["hatchling~=1.14.0"]
build-backend = "hatchling.build"

[project]
name = "metricflow-semantics"
version = "0.1.0"
description = "Modules for semantic understanding of a MetricFlow query."
readme = "README.md"
requires-python = ">=3.8,<3.12"
license = "BUSL-1.1"
authors = [
  { name = "dbt Labs", email = "info@dbtlabs.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "dbt-semantic-interfaces>=0.5.1, <0.6.0",
  "pandas>=1.5.0, <1.6.0",
  "rapidfuzz>=3.0, <4.0",
]

[project.optional-dependencies]
dev-packages = [
  # Developer tools
  "mypy>=1.7.0, <1.8.0",
  "pre-commit>=3.2.2, <3.3.0",
  "pytest-mock>=3.7.0, <3.8.0",
  "pytest-xdist>=3.2.1, <3.3.0",
  "pytest>=7.1.1, < 7.2.0",
  "tabulate>=0.8.9",
  "types-PyYAML",
  "types-python-dateutil",
  "types-tabulate",
]

[tool.hatch.envs.dev-env]
description = "Environment for development. Includes a DuckDB-backed client."

features = [
  "dev-packages",
]


[project.urls]
"Source Code" = "https://github.com/dbt-labs/metricflow/tree/main/metricflow-semanitcs"

[tool.hatch.build.targets.sdist]
packages = ["metricflow_semantics"]

[tool.hatch.build.targets.wheel]
packages = ["metricflow_semantics"]
