[build-system]
requires = ["hatchling~=1.14.0", "hatch-requirements-txt >= 0.4.1, <0.5.0"]
build-backend = "hatchling.build"

[project]
name = "metricflow-semantics"
version = "0.1.0"
description = "Modules for semantic understanding of a MetricFlow query."
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = "BUSL-1.1"
authors = [
  { name = "dbt Labs", email = "info@dbtlabs.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# Dependencies are specified through the `hatch-requirements-txt` plug-in.
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = [
  "extra-hatch-configuration/requirements.txt",
]

[tool.hatch.envs.dev-env]
description = "Environment for development. Includes a DuckDB-backed client."

dependencies = [
  # Developer tools
  "mypy>=1.7.0, <1.8.0",
  "pre-commit>=3.2.2, <3.3.0",
  "pytest-mock>=3.14.0, <3.15.0",
  "pytest-xdist>=3.6.0, <3.7.0",
  "pytest>=8.0.0, < 9.0.0",
  "PyYAML>=6.0, <7.0.0",
  "tabulate>=0.8.9",
  "types-PyYAML",
  "types-python-dateutil",
  "types-tabulate",
]


[project.urls]
"Source Code" = "https://github.com/dbt-labs/metricflow/tree/main/metricflow-semanitcs"

[tool.hatch.build.targets.sdist]
packages = ["metricflow_semantics"]

# include doesn't seem to work with packages, so using force include.
[tool.hatch.build.targets.sdist.force-include]
"ATTRIBUTION.md" = "ATTRIBUTION.md"

[tool.hatch.build.targets.wheel]
packages = ["metricflow_semantics"]

[tool.hatch.build.targets.wheel.force-include]
"ATTRIBUTION.md" = "ATTRIBUTION.md"
