[build-system]
requires = ["hatchling~=1.14.0", "hatch-requirements-txt >= 0.4.1, <0.5.0"]
build-backend = "hatchling.build"

[project]
name = "metricflow-semantics"
description = "Modules for semantic understanding of a MetricFlow query."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = "Apache-2.0"
authors = [
  { name = "dbt Labs", email = "info@dbtlabs.com" },
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

# Dependencies are specified through the `hatch-requirements-txt` plug-in.
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "metricflow_semantics/__about__.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = [
  "requirements-files/requirements.txt",
]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev-env-requirements = [
  "requirements-files/dev-env-requirements.txt",
]

[tool.hatch.envs.dev-env]
description = "Environment for development. Includes a DuckDB-backed client."
features = ["dev-env-requirements"]


[project.urls]
"Source Code" = "https://github.com/dbt-labs/metricflow/tree/main/metricflow-semanitcs"

[tool.hatch.build.targets.sdist]
packages = ["metricflow_semantics"]

# include doesn't seem to work with packages, so using force include.
[tool.hatch.build.targets.sdist.force-include]
"ATTRIBUTION.md" = "ATTRIBUTION.md"

[tool.hatch.build.targets.wheel]
packages = ["metricflow_semantics"]

[tool.hatch.build.targets.wheel.force-include]
"ATTRIBUTION.md" = "ATTRIBUTION.md"
