[package]
name = "mf-manifest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mf-core = { path = "../mf-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
