[package]
name = "mf-planning"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mf-core = { path = "../mf-core" }
mf-manifest = { path = "../mf-manifest" }
petgraph = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
