[package]
name = "mf-sql"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
mf-core = { path = "../mf-core" }
mf-manifest = { path = "../mf-manifest" }
mf-planning = { path = "../mf-planning" }
petgraph = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
